facet-macros-emit/tests/codegen/snapshots/r#mod__codegen__repr_c_enum_lifetime_field.snap
---
source: facet-macros-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        #[repr(C)]\n        enum EnumWithLifetimeField {\n            Variant1 { field1: &'static str },\n        }\n        \"#)"
---
static ENUM_WITH_LIFETIME_FIELD_SHAPE: &'static ::facet::Shape =
    <EnumWithLifetimeField as ::facet::Facet>::SHAPE;
#[automatically_derived]
#[allow(non_camel_case_types)]
unsafe impl<'__facet> ::facet::Facet<'__facet> for EnumWithLifetimeField {
    const SHAPE: &'static ::facet::Shape = &const {
        #[repr(C)]
        #[allow(dead_code)]
        enum __Shadow_CRepr_Discriminant_for_EnumWithLifetimeField {
            Variant1,
        }
        #[repr(C)]
        #[allow(non_snake_case, dead_code)]
        union __Shadow_CRepr_Fields_Union_for_EnumWithLifetimeField<'__facet> {
            Variant1: ::core::mem::ManuallyDrop<
                __Shadow_CRepr_FieldEnumWithLifetimeField_Variant1<'__facet>,
            >,
        }
        #[repr(C)]
        #[allow(non_snake_case)]
        #[allow(dead_code)]
        struct __Shadow_CRepr_Struct_for_EnumWithLifetimeField<'__facet> {
            _discriminant: __Shadow_CRepr_Discriminant_for_EnumWithLifetimeField,
            _phantom: ::core::marker::PhantomData<(*mut &'__facet ())>,
            _fields: __Shadow_CRepr_Fields_Union_for_EnumWithLifetimeField<'__facet>,
        }
        #[repr(C)]
        #[allow(non_snake_case, dead_code)]
        struct __Shadow_CRepr_FieldEnumWithLifetimeField_Variant1<'__facet> {
            field1: &'static str,
            _phantom: ::core::marker::PhantomData<(*mut &'__facet ())>,
        }
        let __facet_variants: &'static [::facet::Variant] = &const {
            [{
                let fields: &'static [::facet::Field] = &const {
                    [{
                        ::facet::Field::builder()
                            .name("field1")
                            .shape(::facet::shape_of(
                                &|s: &__Shadow_CRepr_FieldEnumWithLifetimeField_Variant1<
                                    '__facet,
                                >| &s.field1,
                            ))
                            .offset(
                                ::core::mem::offset_of!(
                                    __Shadow_CRepr_Struct_for_EnumWithLifetimeField<'__facet>,
                                    _fields
                                ) + ::core::mem::offset_of!(
                                    __Shadow_CRepr_FieldEnumWithLifetimeField_Variant1<'__facet>,
                                    field1
                                ),
                            )
                            .build()
                    }]
                };
                ::facet::Variant::builder()
                    .name("Variant1")
                    .discriminant(0i64 as i64)
                    .data(
                        ::facet::StructType::builder()
                            .repr(::facet::Repr::c())
                            .struct_()
                            .fields(fields)
                            .build(),
                    )
                    .build()
            }]
        };
        ::facet::Shape::builder_for_sized::<Self>()
            .vtable({
                ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(
                    f,
                    "EnumWithLifetimeField"
                ))
            })
            .type_identifier("EnumWithLifetimeField")
            .ty(::facet::Type::User(::facet::UserType::Enum(
                ::facet::EnumType::builder()
                    .variants(__facet_variants)
                    .repr(::facet::Repr::c())
                    .enum_repr(::facet::EnumRepr::from_discriminant_size::<
                        __Shadow_CRepr_Discriminant_for_EnumWithLifetimeField,
                    >())
                    .build(),
            )))
            .build()
    };
}
