facet-macros-emit/tests/codegen/snapshots/r#mod__codegen__struct_doc_comment_unicode.snap
---
source: facet-macros-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        /// yes 😄\n        /// no\n        #[derive(Facet)]\n        struct Foo {}\n        \"#)"
---
static FOO_SHAPE: &'static ::facet::Shape = <Foo as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for Foo {
    const VTABLE: &'static ::facet::ValueVTable = &const {
        let mut vtable =
            ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(f, "Foo"));
        vtable
    };
    const SHAPE: &'static ::facet::Shape<'static> = &const {
        let fields: &'static [::facet::Field] = &const { [] };
        ::facet::Shape::builder_for_sized::<Self>()
            .type_identifier("Foo")
            .ty(::facet::Type::User(::facet::UserType::Struct(
                ::facet::StructType::builder()
                    .repr(::facet::Repr::default())
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            )))
            .doc(&[" yes 😄", " no"])
            .build()
    };
}
